[package]
name = "tower-grpc-examples"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "route-guide-server"
path = "src/routeguide/server.rs"

[[bin]]
name = "route-guide-client"
path = "src/routeguide/client.rs"

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.4"
prost-derive = "0.4"
tokio-core = "0.1"
tower-grpc = { path = "../" }

# For the routeguide example
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.tower-h2]
git = "https://github.com/tenx-tech/tower-h2"
rev = "12c3c55"

[dependencies.tower-http]
git = "https://github.com/tenx-tech/tower-http"
rev = "19e769b"

[dependencies.tower-service]
git = "https://github.com/tower-rs/tower"
rev = "20fb04e"

[build-dependencies]
tower-grpc-build = { path = "../tower-grpc-build" }

[patch.crates-io]
http = { git = "http://github.com/hyperium/http", rev = "5f362a32278891672f428d570d46387fe6896a5d" }
