[package]
name = "tower-grpc-interop"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
license = "MIT"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.4"
prost-derive = "0.4"
tokio-core = "0.1"
tower-grpc = { path = "../" }

clap = "~2.29"
console = "0.5.0"
rustls = "0.11.0"
domain = "0.2.2"

[dependencies.tower-h2]
git = "https://github.com/tenx-tech/tower-h2"
rev = "12c3c55"

[dependencies.tower-http]
git = "https://github.com/tenx-tech/tower-http"
rev = "19e769b"

[dependencies.tower-service]
git = "https://github.com/tower-rs/tower"
rev = "20fb04e"

[build-dependencies]
tower-grpc-build = { path = "../tower-grpc-build" }

[patch.crates-io]
http = { git = "http://github.com/hyperium/http", rev = "5f362a32278891672f428d570d46387fe6896a5d" }
