[package]
name = "multifile"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[dependencies]
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"
tower-grpc = { path = "../../" }

[dependencies.tower-h2]
git = "https://github.com/tenx-tech/tower-h2"
rev = "12c3c55"

[build-dependencies]
tower-grpc-build = { path = "../../tower-grpc-build" }
